#3 Alteração na tela

--- a/TelaJogo/nbproject/private/private.properties
+++ b/TelaJogo/nbproject/private/private.properties
@@ -1,12 +1,12 @@
-deploy.ant.properties.file=C:\\Users\\631420226\\AppData\\Roaming\\NetBeans\\8.1\\config\\GlassFishEE6\\Properties\\gfv360443232.properties
-file.reference.BootsFaces-OSP-0.8.6-dist-default.jar=C:\\Users\\631420226\\Downloads\\BootsFaces-OSP-0.8.6-dist.jar
-file.reference.glassfish-4.1-web.zip=C:\\Users\\631420226\\Downloads\\glassfish-4.1-web.zip
+deploy.ant.properties.file=/home/zod/.netbeans/8.1/config/GlassFishEE6/Properties/gfv31295750192.properties
+file.reference.BootsFaces-OSP-0.8.6-dist-default.jar=/home/zod/Downloads/BootsFaces-OSP-0.8.1-dist-default.jar
+file.reference.glassfish-4.1-web.zip=/home/zod/Downloads/glassfish-4.1-web.zip
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=C:/Users/631420226/AppData/Roaming/NetBeans/8.1/config/GF_4.1.1/domain1
-j2ee.server.home=C:/Program Files/glassfish-4.1.1/glassfish
-j2ee.server.instance=[C:\\Program Files\\glassfish-4.1.1\\glassfish;C:\\Program Files\\glassfish-4.1.1\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
-j2ee.server.middleware=C:/Program Files/glassfish-4.1.1
+j2ee.server.domain=/home/zod/GlassFish_Server/glassfish/domains/domain1
+j2ee.server.home=/home/zod/GlassFish_Server/glassfish
+j2ee.server.instance=[/home/zod/GlassFish_Server/glassfish:/home/zod/GlassFish_Server/glassfish/domains/domain1]deployer:gfv3ee6wc:localhost:4848
+j2ee.server.middleware=/home/zod/GlassFish_Server
 javac.debug=true
 javadoc.preview=true
 selected.browser=SL[/Browsers/FirefoxBrowser
-user.properties.file=C:\\Users\\631420226\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
+user.properties.file=/home/zod/.netbeans/8.1/build.properties
