--- a/TelaJogo/nbproject/project.properties
+++ b/TelaJogo/nbproject/project.properties
@@ -30,8 +30,6 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.BootsFaces-OSP-0.8.6-dist-default.jar=C:\\Users\\Katsutoshi\\Downloads\\BootsFaces-OSP-0.8.6-dist-default.jar
-file.reference.glassfish-4.1-web.zip=glassfish-4.1-web.zip
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -45,9 +43,7 @@ j2ee.platform.wsimport.classpath=${j2ee.server.home}/modules/webservices-osgi.ja
 j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
-javac.classpath=\
-    ${file.reference.BootsFaces-OSP-0.8.6-dist-default.jar}:\
-    ${file.reference.glassfish-4.1-web.zip}
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
